--- a/mtcyapp.plist
+++ b/mtcyapp.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/zgc1092734368/mtcy/master/pro/茅台创业.ipa</string>
+					<string>https://raw.githubusercontent.com/zgc1092734368/mtcy/master/pro/mtcy.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
