--- a/mtcyapp.plist
+++ b/mtcyapp.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/zgc1092734368/mtcy/master/pro/mtcyde.ipa</string>
+					<string>http://www.mtcy168.com/app/pro/mtcyde.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/zgc1092734368/mtcy/master/icon/icon.png</string>
+					<string>http://www.mtcy168.com/app/icon/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/zgc1092734368/mtcy/master/icon/icon.png</string>
+					<string>http://www.mtcy168.com/app/icon/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
